<resources xmlns:app_name="http://schemas.android.com/apk/res-auto">
    <string name="app_name" translatable="false">XcarTest</string>
    <string name="wrong_plate_format">Formato de Matrícula del Usuario inválida</string>
    <string name="wrong_user">Usuario y/o Password Inválido</string>
    <string name="plate_enter"><font size="8">Introduzca Matricula</font></string>
    <string name="Search">Buscar</string>
    <string name="verify">Verificar</string>
    <string name="action_location">Ubicación</string>
    <string name="action_additionalPlate">Matricula Adicional</string>
    <string name="sameUserSearch">No se puede realizar una búsqueda a tu propio usuario</string>
    <string name="nonExist_user">Usuario no Existe y/o Contraseña Incorrecta</string>
    <string name="profile_menu">Perfil</string>
    <string name="chat_menu">Chat</string>
    <string name="logout_menu">Salir</string>
    <string name="home_menu">Inicio</string>
    <string name="action_settings">Configuración</string>
    <string name="action_about">Acerca de</string>
    <string name="action_contacts">Contacto</string>
    <string name="profile_subtitle">Perfil del Usuario</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="profile_header">PERFIL</string>
    <string name="infoLbl">Información Adicional</string>
    <string name="reply">Responder</string>
    <string name="addPlate">Agregar matrícula adicional</string>
    <string name="addPlateButton">Agregar matrícula</string>
    <string name="wrong_format_plate">Formato Matricula Errónea</string>
    <string name="unregistered_user">El usuario no esta registrado</string>
    <string name="targetMessage">Introduzca un mensaje al destinatario</string>
    <string name="targetMessageContacto">Introduzca un mensaje</string>
    <string name="targetUser">Destinatario</string>
    <string name="tab" translatable="false">\t</string>
    <string name="targetUserSend">Matricula Destinatario</string>
    <string name="gotChat">Ir al Chat</string>
    <string name="sendText">ENVIAR  </string>
    <string name="terms_privacy"><b> <font color="blue">Términos y condiciones y Política de privacidad</font></b></string>
    <string name="delete_chat">Eliminar Chat</string>
    <string name="password_strong">Mínimo 8 caracteres: 1 minúscula, 1 mayúscula y un número</string>
    <string name="new_user">Registro Nuevo Usuario</string>
    <string name="name">Nombre</string>
    <string name="plate_name" translatable="true">Matricula y/o Email</string>
    <string name="email_name">Email</string>
    <string name="password_name">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="register">REGISTRARSE</string>
    <string name="accept_terms">He leido y acepto los </string>
    <string name="welcome">Welcome</string>
    <string name="banner_ad_unit_id">ca-app-pub-7506110687995747/7372926087</string>
    <string name="plateHint">" Matrícula"</string>
    <string name="passHint">" Contraseña"</string>
    <string name="loginLbl">Login</string>
    <string name="welcomeHomeText">Bienvenidos a Xcar"</string>
    <string name="forgottenPass"><b> <font color="blue">¿Has olvidado tu contraseña?</font></b></string>
    <string name="newUser">¿Nuevo usuario?<font color="blue"><b>Haz click aquí</b></font></string>
    <string name="brandHint">Marca</string>
    <string name="modelHint">Modelo</string>
    <string name="colorHint">Color</string>
    <string name="yearHint">Año</string>
    <string name="addMob">ca-app-pub-7506110687995747~3078457854</string>
    <string name="newPassHint">Nueva Contraseña</string>
    <string name="confirmPassHint">Confirmar Contraseña</string>
    <string name="changePassHint">Cambiar Contraseña</string>
    <string name="updatePassHint">Actualizar Contraseña</string>
    <string name="modifyInfo">Modificar Info</string>
    <string name="support" translatable="false">Soporte Xcar</string>
    <string name="updateInfo">Actualizar Info</string>
    <string name="allfieldFilled">"Deben llenarse todos los campos"</string>
    <string name="welcomeMessage">"Bienvenidos a Xcar"</string>
    <string name="wrong_password">"La contraseña debe contener mínimo 8 caracteres, 1 letra minúscula, 1 mayúscula y un número"</string>
    <string name="backLogin">"Regresar al Login"</string>
    <string name="noTermsAccepted">"No se ha aceptado los terminos y condiciones y poítica de privacidad"</string>
    <string name="noPassMatch">"Las contraseñas no coinciden"</string>
    <string name="wrongEmailFormat">Formato de email inválido</string>
    <string name="noConexion">Error en Conexión de Internet</string>
    <string name="noEmptyFields">El campo Email no puede estar vacío</string>
    <string name="passResetLbl">Resetear Contraseña</string>
    <string name="existePlate">Esta matrícula ya existe</string>
    <string name="reset">Resetear</string>
    <string name="passResetMsg">La contraseña ha sido reseteada y una nueva contraseña ha sido enviada al email indicado </string>
    <string name="generatedPass">"Contraseña Generada"</string>
    <string name="passChangeLbl">Cambio Contraseña</string>
    <string name="confirmNewPassHint">Confirmar nueva contraseña</string>
    <string name="changePssButton">Cambiar Contraseña</string>
    <string name="passStrongChange">Mínimo 8 caracteres, 1 mayúscula y un número</string>
    <string name="noEmptyPassFields">Los campos Nueva Contraseña y Confirmar Nueva Contraseña no pueden estar vacíos</string>
    <string name="passUpdated">Su contraseña ha sido actualizada correctamente</string>
    <string name="notPassMatch">Nueva contraseña y Confirmar nueva contraseña no coinciden</string>
    <string name="passStrongErr">La contraseña debe tener al menos 8 caracteres, 1 letra minúscula, 1 maýuscula y un número</string>
    <string name="issueSelect">Seleccionar asunto</string>
    <string name="issueEmpty">Se debe elegir un asunto</string>
    <string name="emptyMessage">Favor de escribir un mensaje</string>
    <string name="sentMessage">Mensaje ha sido enviado al equipo de soporte</string>
    <string name="noImage">Archivo seleccionado no es una imagen o foto</string>
    <string name="noSelectedImage">No se ha seleccionado ninguna imagen</string>
    <string name="unblockedUser">Usuario desbloqueado</string>
    <string name="blockedUser">Usuario bloqueado</string>
    <string name="lockedUserMsg">¿Deseas bloquear el usuario:</string>
    <string name="unlockUserMsg">"¿Deseas desbloquear el usuario:</string>
    <string name="deleteChatMsg">¿Seguro deseas borrar el chat?</string>
    <string name="noData">No hay datos disponibles</string>
    <string name="typeVehicle">Tipo</string>
    <string name="receivedNotifications">Notificaciones</string>
    <string name="sendNotifications">Enviar Incidencia/Aviso</string>
    <string name="delNotificationMessage">¿Seguro que quieres borrar esta notificación?</string>
    <string name="autoSend">No se puede autoenviar mensajes</string>
    <string name="noNotificationSent">No se puede enviar notificadciones al usuario</string>
    <string name="messageSent">Se ha enviado correctamente el mensaje al destinatario</string>
    <string name="recentMessage">Se ha enviado correctamente el mensaje al destinatario</string>
    <string name="emptyTargetUser">Destinatario no debe estar vacío</string>
    <string name="deletedNotification">Notificación borrada</string>
    <string name="delete">Eliminar</string>
    <string name="plateDeleted">Matrícula borrada</string>
    <string name="deletePlateMsg">Deseas borrar esta matrícula</string>
    <string name="deleteChatMenu">Eliminar Chat</string>
    <string name="lockUser">Bloquear Usuario</string>
    <string name="userInfo">Info. Usuario</string>
    <string name="yes">Si</string>
    <string name="logout">¿Deseas salir de la aplicación?</string>
    <string name="No">No</string>
    <string name="infoUser">¿Info. Usuario?</string>
    <string name="closeButton">CERRAR</string>
    <string name="action_howItWorks">Cómo Funciona</string>
    <string name="NoMessageSendLockUser">No se puede enviar mensaje a este Usuario. Usuario bloqueado</string>
    <string name="selectImage">Elegir Imagen</string>
    <string name="selectLanguage">Seleccionar Idioma</string>
    <string name="noLanguageSelected">Se debe seleccionar el idioma</string>
    <string name="additionalInfor">Información Adicional</string>
    <string name="infoUserLbl">Info. Usuario</string>
    <string name="locked">Bloqueado</string>
    <string name="noExists">Usuario no existe</string>
    <string name="deletedChat">Chat Borrado</string>
    <string name="version">Versión</string>
    <string name="noNotifications">No hay notificaciones"</string>
    <string name="infoUpdated">La información se ha actualizado correctamente</string>
    <string name="noPassEmpty">Los campos contraseñas no pueden estar vacíos</string>
    <string name="plateEmpty">Campo matrícula no debe estar vacío</string>
    <string name="plateAdded">Matrícula agregada</string>
    <string name="invalidAdditonalPlateFieñds">Se debe seleccionar tipo de vehiculo y/o se deben completar todos los campos</string>
    <string name="sucessfully">exitósamente</string>
    <string name="recently">recientemente</string>
    <string name="cancel">Cancelar</string>
    <string name="shareWith">Compartir con un Amigo</string>
    <string name="shareFriend">Compartir con</string>
    <string name="imageSelectLbl">Seleccionar una Imagen</string>
    <string name="changeLanguage">Cambiar Idioma</string>
    <string name="spanishLan">Español</string>
    <string name="englishLan">Inglés</string>
    <string name="frenchLan">Francés</string>
    <string name="germanLan">Alemán</string>
    <string name="italianLan">Italiano</string>
    <string name="portugueseLan">Portugués</string>
    <string name="russianLan">Ruso</string>
    <string name="chineseLan">Chino</string>
    <string name="japanLan">Japonés</string>
    <string name="dutchLan">Holandés</string>
    <string name="polishLan">Polaco</string>
    <string name="koreanLan">Coreano</string>
    <string name="swedishLan">Sueco</string>
    <string name="arabicLan">Arabe</string>
    <string name="urduLan">Urdu</string>
    <string name="hindiLan">Hindi</string>
    <string name="warningLanguage">AVISO: Si vas a cambiar de Idioma, por favor reiniciar la aplicación para que surta efecto.</string>
    <string name="chatText">Haciendo en el botón Chat, entras a la sección donde encontrás una lista de conversaciones previas que hayas hecho con otros usuarios y también puedes iniciar una nueva conversión con otro usuario introduciéndo la matrícula de un vehículo ya registrado en la aplicación, así como también puedes borrar el chat, bloquear el usuario, etc.</string>
    <string name="sendNotiText">Haciendo click en el botón de Notificaciones en forma de sobre, hace click en el botón +, entras a la sección de Enviar Notificación y aquí tienes la posibilidad de notificación o aviso a un usuario existente en la aplicación, así como adjuntar una imagen a la notificación.</string>
    <string name="sendNoti">Enviar Notificación</string>
    <string name="receiveText">Haciendo click en el botón de Notificaciones en forma de sobre, entras a la sección de Notificaciones recibidas, donde verás una lista de los mensajes que te han enviado otros usuarios, así como así también como imagenes adjuntas si hay en la notificación enviada previamente.</string>
    <string name="receiveNotification">Recibir Notificaciones</string>
    <string name="settingText">Haciendo click en el menú auxiliar y luego en la opción Configuración, entras a la sección Configuración donde en ella  puedes cambiar al idioma que deseas que la aplicación se muestre.</string>
</resources>