<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Home_Menu"
        android:icon="@drawable/inicio"
        android:checked="false"
        android:title="@string/home_menu" />
      <item
        android:id="@+id/Chat_Menu"
        android:icon="@drawable/chat"
          android:checked="false"
        android:title="@string/chat_menu" />
    <item
        android:id="@+id/Notifications_Menu"
        android:icon="@android:drawable/ic_dialog_email"
        android:checked="true"
        android:title="@string/receivedNotifications" />

    <item
        android:id="@+id/Profile_Menu"
        android:icon="@drawable/perfil1"
        android:checked="true"
        android:title="@string/profile_menu" />
</menu>