<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:background="@android:color/holo_blue_dark"
    android:gravity="center_vertical"
    android:layout_marginStart="5dp"
    android:orientation="vertical"
    android:outlineAmbientShadowColor="@android:color/darker_gray"
    tools:ignore="UnusedAttribute">


    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/logout" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/yes" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="25dp"
        android:text="@string/No" />
</RelativeLayout>

