<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:gravity="start|left"
        android:text="@string/infoUserLbl"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/carTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:singleLine="false"
        android:text="@string/infoUser"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/carBrandText"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:text="@string/infoUser" />

    <TextView
        android:id="@+id/carModelText"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="20dp"
        android:text="@string/infoUser" />

    <TextView
        android:id="@+id/carColorText"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="20dp"
        android:text="@string/infoUser" />

    <TextView
        android:id="@+id/carYearText"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="20dp"
        android:text="@string/infoUser" />

    <TextView
        android:id="@+id/closebutton"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="180dp"
        android:text="@string/closeButton" />

    </RelativeLayout>